<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="15dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEADE"
    tools:context=".LoginActivity">

    <TextView
        android:text="@string/welcome_backk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="50dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/txt_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_with"
        android:paddingStart="25sp"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:padding="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sigh_up_with_google"
            android:textColor="#0096FF"
            android:textStyle="bold"
            android:textSize="11sp"
            android:background="@android:color/transparent"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sigh_up_with_facebook"
            android:textColor="#0096FF"
            android:textStyle="bold"
            android:textSize="11sp"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="20sp"
        android:padding="10dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />
    <TextView
        android:paddingTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_0"
        android:textStyle="bold"
        android:textSize="16sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/abc_gmail_com"

        />
    <TextView
        android:paddingTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordd"
        android:textStyle="bold"
        android:textSize="16dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:layout_gravity="end"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        />

    <!-- Keep me logged in checkbox -->
    <CheckBox
        android:id="@+id/keepMeLoggedInCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:layout_marginBottom="16dp" />
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_rect_bg"
        android:onClick="onClickLogin"
        android:textColor="@color/white"/>

</LinearLayout>
